--- a/corprules.in
+++ b/corprules.in
@@ -6402,9 +6402,7 @@ OBJ ATHE SCI_PERSON
 OBJ BIGTHEOREM
 OBJ FINDING
 
-TIMPLG \textit{TIMPL}
-TIMPLG `TIMPL'
-TIMPLG+10 TIMPL
+TIMPLG+10 TIMPL,
 TIMPLG+15 
 SCI_MANY+2 many
 SCI_MANY+2 few
@@ -6422,18 +6420,19 @@ ACTGS \textit{ACTS}
 ACTGS `ACTS'
 ACTS MAYBE_ADV OVERVERBS
 ACTS GMOD MAYBE_ADV OVERVERB
+ACTS does not MAYBE_ADV OVERVERB
 
 MAYBE_ADV OVERADV
 MAYBE_ADV+2
 GMOD+2 SCI_MAY
 GMOD helps to
 GMOD SCI_MAY help to
-GMOD does not
 
 ACTGP \textit{ACTP}
 ACTGP `ACTP'
 ACTP MAYBE_ADV OVERVERB
 ACTP GMOD MAYBE_ADV OVERVERB
+ACTP do not MAYBE_ADV OVERVERB
 
 IMPG+4 CONSIDER
 IMPG let
