--- a/corprules.in
+++ b/corprules.in
@@ -6300,8 +6300,8 @@ OMIT_WHY for anonymity
 OMIT_WHY for now
 OMIT_WHY until future work
 
-GENERIC_SENTENCE PREAMBLE GCLAUSECLSUFF XXX
-GENERIC_SENTENCE PREAMBLE GCLAUSECONJUNC GCLAUSECLSUFF XXX
+GENERIC_SENTENCE PREAMBLE GCLAUSECLSUFF XXX 
+GENERIC_SENTENCE PREAMBLE GCLAUSECONJUNC GCLAUSECLSUFF XXX 
 
 PREAMBLE+5
 PREAMBLE+2 LIT_ALTHOUGH
@@ -6333,9 +6333,9 @@ GCLAUSE IMPG OBJG DATG TIMPLG TIMPLG
 GCLAUSE TIMPLG IMPG OBJG TIMPLG DATG
 GCLAUSE TIMPLG IMPG OBJG DATG TIMPLG
 
-CONJUNC , which GMOD
-CONJUNC , and GMOD
-CONJUNC ; this GMOD
+CONJUNC , which
+CONJUNC , and
+CONJUNC ; this
 CONJUNC , LIT_OFTEN OVERVERBING that
 
 CLSUFF+10
@@ -6351,7 +6351,6 @@ MAYBE_AMOUNT WAMOUNT percent of
 SUBGS \textit{SUBS}
 SUBGS `SUBS'
 SUBGS+10 MAYBE_AMOUNT SUBS
-SUBS I
 SUBS KEYTHE SCI_THING_S
 SUBS KEYTHE SCI_PERSON
 SUBS KEYTHE PROPNOUN
@@ -6363,6 +6362,7 @@ SUBS KEYTHE SCI_MODEL_TYPE
 SUBGP \textit{SUBP}
 SUBGP `SUBP'
 SUBGP+10 MAYBE_AMOUNT SUBP
+SUBP I
 SUBP we
 SUBP they
 SUBP SCI_THING_P
@@ -6402,7 +6402,7 @@ OBJ ATHE SCI_PERSON
 OBJ BIGTHEOREM
 OBJ FINDING
 
-TIMPLG+10 TIMPL,
+TIMPLG+10 TIMPL
 TIMPLG+15 
 SCI_MANY+2 many
 SCI_MANY+2 few
@@ -6418,18 +6418,19 @@ TIMPL by the MAYBE_ADJ LABRATS
 
 ACTGS \textit{ACTS}
 ACTGS `ACTS'
+ACTGS+10 ACTS
 ACTS MAYBE_ADV OVERVERBS
 ACTS GMOD MAYBE_ADV OVERVERB
 ACTS does not MAYBE_ADV OVERVERB
 
 MAYBE_ADV OVERADV
 MAYBE_ADV+2
-GMOD+2 SCI_MAY
-GMOD helps to
+GMOD+2 SCI_CAN
 GMOD SCI_MAY help to
 
 ACTGP \textit{ACTP}
 ACTGP `ACTP'
+ACTGP+10 ACTP
 ACTP MAYBE_ADV OVERVERB
 ACTP GMOD MAYBE_ADV OVERVERB
 ACTP do not MAYBE_ADV OVERVERB
@@ -7893,20 +7894,20 @@ GANTTKEY KEYTHE SCI_MODEL_TYPE GANTTLINE
 GANTTKEY KEYTHE SCI_VERBION GANTTLINE
 #GANTTKEY KEYTHE SCI_SYSTEM GANTTLINE
 
-KEYTHE+10 The
-KEYTHE+20 Our
-KEYTHE Corporate
-KEYTHE Clinical
-KEYTHE University
-KEYTHE Organisational
-KEYTHE Managerial
-KEYTHE Regional
-KEYTHE Explicit
-KEYTHE Manifest
-KEYTHE Industrial
-KEYTHE Industrialised
-KEYTHE Militarised
-KEYTHE Incentivised
+KEYTHE+10 the
+KEYTHE+20 our
+KEYTHE corporate
+KEYTHE clinical
+KEYTHE university
+KEYTHE organisational
+KEYTHE managerial
+KEYTHE regional
+KEYTHE explicit
+KEYTHE manifest
+KEYTHE industrial
+KEYTHE industrialised
+KEYTHE militarised
+KEYTHE incentivised
 
 GANTTCHARTTEXT Gantt chart:
 GANTTCHARTTEXT Gantt diagram:
@@ -8093,8 +8094,8 @@ PIEENDER representing our SOFTWARE_SYSTEM
 PIEENDER used by our EXP_WHEREs
 PIEENDER involving SCI_THING_MOD
 PIEENDER used in OVERVERBING SCI_GENERIC_NOUN
-PIEENDER that SCI_VERBS SCI_THING_P
-PIEENDER that SCI_CAN METAVERB SCI_GENERIC_NOUN
+PIEENDER that SCI_CAN OVERVERB SCI_THING_P
+PIEENDER that SCI_CAN OVERVERB SCI_GENERIC_NOUN
 
 PIETEXT A PIENAME PIEENDER:
 PIETEXT The IMPL_COMPONENT PIENAME PIEENDER:
