--- a/corprules.in
+++ b/corprules.in
@@ -1181,6 +1181,7 @@ OVERVERB+3 SPOIL
 OVERVERB+3 CONSIDER
 OVERVERB SCREWOVER
 OVERVERB IMPROVE_VERB
+OVERVERB ENSUE
 
 OVERVERBS SCI_VERBS
 OVERVERBS SCI_DIAGRAM_VERBS
@@ -6270,6 +6271,7 @@ FILLER_SURPRISE_2	LIT_OFTEN conflicts with the need to provide SCI_THING to SCI_
 FILLER_SENTENCE+3 LAME_OBSERVATION
 FILLER_SENTENCE+2 We know; it's confusing
 FILLER_SENTENCE	We really won't	take no	for an answer
+FILLER_SENTENCE+5 GENERIC_SENTENCE
 
 LAME_OBSERVATION We shot the sheriff, but we did not shoot the deputy INTERJEC
 LAME_OBSERVATION We couldn't agree more, but we will anyway
@@ -6338,7 +6340,7 @@ CONJUNC , and
 CONJUNC ; this
 CONJUNC , LIT_OFTEN OVERVERBING that
 
-CLSUFF+10
+CLSUFF+20
 CLSUFF PETTY_SUF
 CLSUFF FUNNEND
 
@@ -6350,7 +6352,7 @@ MAYBE_AMOUNT WAMOUNT percent of
 
 SUBGS \textit{SUBS}
 SUBGS `SUBS'
-SUBGS+10 MAYBE_AMOUNT SUBS
+SUBGS+20 MAYBE_AMOUNT SUBS
 SUBS KEYTHE SCI_THING_S
 SUBS KEYTHE SCI_PERSON
 SUBS KEYTHE PROPNOUN
@@ -6361,7 +6363,7 @@ SUBS KEYTHE SCI_MODEL_TYPE
 
 SUBGP \textit{SUBP}
 SUBGP `SUBP'
-SUBGP+10 MAYBE_AMOUNT SUBP
+SUBGP+20 MAYBE_AMOUNT SUBP
 SUBP I
 SUBP we
 SUBP they
@@ -6371,7 +6373,7 @@ SUBP CONSTRAINT_P
 
 OBJG \textit{OBJ}
 OBJG `OBJ'
-OBJG+10 OBJ
+OBJG+20 OBJ
 MAYBE_ADJ+5 EXP_ADJ
 MAYBE_ADJ SCI_COUNTRY_MAYBE
 MAYBE_ADJ RELATED
@@ -6418,7 +6420,7 @@ TIMPL by the MAYBE_ADJ LABRATS
 
 ACTGS \textit{ACTS}
 ACTGS `ACTS'
-ACTGS+10 ACTS
+ACTGS+20 ACTS
 ACTS MAYBE_ADV OVERVERBS
 ACTS GMOD MAYBE_ADV OVERVERB
 ACTS does not MAYBE_ADV OVERVERB
@@ -6430,7 +6432,7 @@ GMOD SCI_MAY help to
 
 ACTGP \textit{ACTP}
 ACTGP `ACTP'
-ACTGP+10 ACTP
+ACTGP+20 ACTP
 ACTP MAYBE_ADV OVERVERB
 ACTP GMOD MAYBE_ADV OVERVERB
 ACTP do not MAYBE_ADV OVERVERB
@@ -6441,7 +6443,7 @@ IMPG let it be the case that
 
 DATG \textit{DAT}
 DATG `DAT'
-DATG+10 DAT
+DATG+20 DAT
 DAT in the SCI_MANNER initially expected
 DAT SCI_TOGETHERWITH OBJ
 DAT for OBJ
