--- a/corprules.in
+++ b/corprules.in
@@ -6312,8 +6312,17 @@ OMIT_WHY for anonymity
 OMIT_WHY for now
 OMIT_WHY until future work
 
-GENERIC_SENTENCE PREAMBLE GCLAUSECLSUFF XXX 
-GENERIC_SENTENCE PREAMBLE GCLAUSECONJUNC GCLAUSECLSUFF XXX 
+GSTART+10 PREAMBLE GCLAUSE
+GSTART GCLAUSEI
+GENERIC_SENTENCE GSTART, MIDTHEN GCLAUSECLSUFF XXX 
+GENERIC_SENTENCE GSTARTCONJUNC GCLAUSECLSUFF. MIDTHEN GCLAUSECLSUFF XXX 
+
+MIDTHEN then
+MIDTHEN it follows that
+MIDTHEN we find that
+MIDTHEN it becomes CLEAR that
+MIDTHEN CLEARLY then
+MIDTHEN one finds
 
 PREAMBLE+5
 PREAMBLE+2 LIT_ALTHOUGH
@@ -6327,28 +6336,27 @@ PREAMBLE Never let it be said that
 GCLAUSE SUBGS TIMPLG TIMPLG ACTGS OBJG DATG
 GCLAUSE TIMPLG TIMPLG SUBGS ACTGS OBJG DATG
 GCLAUSE SUBGS ACTGS OBJG TIMPLG TIMPLG DATG
-GCLAUSE SUBGS ACTGS OBJG DATG TIMPLG TIMPLG
+GCLAUSE SUBGS ACTGS OBJG DATG TIMPLGE
 GCLAUSE TIMPLG SUBGS ACTGS OBJG TIMPLG DATG
-GCLAUSE TIMPLG SUBGS ACTGS OBJG DATG TIMPLG
+GCLAUSE TIMPLG SUBGS ACTGS OBJG DATG TIMPLGE
 
 GCLAUSE SUBGP TIMPLG TIMPLG ACTGP OBJG DATG
 GCLAUSE TIMPLG TIMPLG SUBGP ACTGP OBJG DATG
-GCLAUSE SUBGP ACTGP OBJG TIMPLG TIMPLG DATG
-GCLAUSE SUBGP ACTGP OBJG DATG TIMPLG TIMPLG
-GCLAUSE TIMPLG SUBGP ACTGP OBJG TIMPLG DATG
-GCLAUSE TIMPLG SUBGP ACTGP OBJG DATG TIMPLG
+GCLAUSE SUBGP ACTGP OBJG TIMPLG TIMPLGE DATG
+GCLAUSE SUBGP ACTGP OBJG DATG TIMPLGE
+GCLAUSE TIMPLG SUBGP ACTGP OBJG TIMPLGE DATG
+GCLAUSE TIMPLG SUBGP ACTGP OBJG DATG TIMPLGE
 
 GCLAUSE TIMPLG TIMPLG IMPG OBJG DATG
 GCLAUSE TIMPLG TIMPLG SUBGP IMPG OBJG DATG
-GCLAUSE IMPG OBJG TIMPLG TIMPLG DATG
-GCLAUSE IMPG OBJG DATG TIMPLG TIMPLG
-GCLAUSE TIMPLG IMPG OBJG TIMPLG DATG
-GCLAUSE TIMPLG IMPG OBJG DATG TIMPLG
+GCLAUSEI IMPG OBJG TIMPLG TIMPLGE
+GCLAUSE TIMPLG IMPG OBJG TIMPLGE DATG
+GCLAUSE TIMPLG IMPG OBJG DATG TIMPLGE
 
-CONJUNC , which
-CONJUNC , and
-CONJUNC ; this
-CONJUNC , LIT_OFTEN OVERVERBING that
+CONJUNC  , which
+CONJUNC  , and
+#CONJUNC ; this
+CONJUNC  , LIT_OFTEN OVERVERBING that
 
 CLSUFF+20
 CLSUFF PETTY_SUF
@@ -6356,13 +6364,11 @@ CLSUFF FUNNEND
 
 MAYBE_AMOUNT+5
 MAYBE_AMOUNT SCI_MANY
-MAYBE_AMOUNT most
+MAYBE_AMOUNT SCI_ANUMBER of
 MAYBE_AMOUNT all
 MAYBE_AMOUNT WAMOUNT percent of
 
-SUBGS \textit{SUBS}
-SUBGS `SUBS'
-SUBGS+20 MAYBE_AMOUNT SUBS
+SUBGS MAYBE_AMOUNT SUBS
 SUBS KEYTHE SCI_THING_S
 SUBS KEYTHE SCI_PERSON
 SUBS KEYTHE PROPNOUN
@@ -6373,7 +6379,7 @@ SUBS KEYTHE SCI_MODEL_TYPE
 
 SUBGP \textit{SUBP}
 SUBGP `SUBP'
-SUBGP+20 MAYBE_AMOUNT SUBP
+SUBGP+20 SUBP
 SUBP I
 SUBP we
 SUBP they
@@ -6401,7 +6407,7 @@ OBJ MAYBE_ADJ SCI_VERBIONs
 OBJ MAYBE_ADJ SCI_MODEL_TYPE_P
 OBJ SCI_FIELD
 OBJ MATHADJ PROPNOUN
-OBJ+3 SCI_GENERIC_NOUN
+#OBJ+3 SCI_GENERIC_NOUN
 OBJ MAYBE_ADJ SCI_THING_P
 OBJ SYSNAME
 OBJ SCI_OVERALL_THESIS_THING
@@ -6414,12 +6420,13 @@ OBJ ATHE SCI_PERSON
 OBJ BIGTHEOREM
 OBJ FINDING
 
-TIMPLG+10 TIMPL
+TIMPLGE TIMPL
+TIMPLG+10 TIMPL,
 TIMPLG+15 
-SCI_MANY+2 many
-SCI_MANY+2 few
-SCI_MANY good many
-SCI_MANY+2 several
+SCI_MANY+2 many of
+SCI_MANY+2 few of
+SCI_MANY a good many of
+SCI_MANY+2 several of
 TIMPL in the last SCI_MANY TRACE_UNIT_LONGs
 TIMPL CDESY
 TIMPL PIEENDER
@@ -6437,7 +6444,7 @@ ACTS does not MAYBE_ADV OVERVERB
 
 MAYBE_ADV OVERADV
 MAYBE_ADV+2
-GMOD+2 SCI_CAN
+GMOD SCI_CAN
 GMOD SCI_MAY help to
 
 ACTGP \textit{ACTP}
@@ -6454,6 +6461,7 @@ IMPG let it be the case that
 DATG \textit{DAT}
 DATG `DAT'
 DATG+20 DAT
+DATG+10 
 DAT in the SCI_MANNER initially expected
 DAT SCI_TOGETHERWITH OBJ
 DAT for OBJ
