--- a/corprules.in
+++ b/corprules.in
@@ -6314,8 +6314,8 @@ OMIT_WHY until future work
 
 GSTART+10 PREAMBLE GCLAUSE
 GSTART GCLAUSEI
-GENERIC_SENTENCE GSTART, MIDTHEN GCLAUSECLSUFF XXX 
-GENERIC_SENTENCE GSTARTCONJUNC GCLAUSECLSUFF. MIDTHEN GCLAUSECLSUFF XXX 
+GENERIC_SENTENCE GSTART, MIDTHEN, GCLAUSECLSUFF XXX 
+GENERIC_SENTENCE GSTARTCONJUNC GCLAUSECLSUFF; MIDTHEN GCLAUSECLSUFF XXX 
 
 MIDTHEN then
 MIDTHEN it follows that
@@ -6333,53 +6333,57 @@ PREAMBLE FUNPRE
 PREAMBLE If
 PREAMBLE Never let it be said that
 
-GCLAUSE SUBGS TIMPLG TIMPLG ACTGS OBJG DATG
-GCLAUSE TIMPLG TIMPLG SUBGS ACTGS OBJG DATG
-GCLAUSE SUBGS ACTGS OBJG TIMPLG TIMPLG DATG
+GCLAUSE SUBGS TIMPLG TIMPLGS ACTGS OBJG DATG
+GCLAUSE TIMPLGS TIMPLGS SUBGS ACTGS OBJG DATG
+GCLAUSE SUBGS ACTGS OBJG TIMPLG TIMPL DATG
 GCLAUSE SUBGS ACTGS OBJG DATG TIMPLGE
-GCLAUSE TIMPLG SUBGS ACTGS OBJG TIMPLG DATG
-GCLAUSE TIMPLG SUBGS ACTGS OBJG DATG TIMPLGE
+GCLAUSE TIMPLGS SUBGS ACTGS OBJG TIMPLGE DATG
+GCLAUSE TIMPLGS SUBGS ACTGS OBJG DATG TIMPLGE
 
-GCLAUSE SUBGP TIMPLG TIMPLG ACTGP OBJG DATG
-GCLAUSE TIMPLG TIMPLG SUBGP ACTGP OBJG DATG
+GCLAUSE SUBGP TIMPLG TIMPLGS ACTGP OBJG DATG
+GCLAUSE TIMPLGS TIMPLGS SUBGP ACTGP OBJG DATG
 GCLAUSE SUBGP ACTGP OBJG TIMPLG TIMPLGE DATG
 GCLAUSE SUBGP ACTGP OBJG DATG TIMPLGE
-GCLAUSE TIMPLG SUBGP ACTGP OBJG TIMPLGE DATG
-GCLAUSE TIMPLG SUBGP ACTGP OBJG DATG TIMPLGE
+GCLAUSE TIMPLGS SUBGP ACTGP OBJG TIMPLGE DATG
+GCLAUSE TIMPLGS SUBGP ACTGP OBJG DATG TIMPLGE
 
-GCLAUSE TIMPLG TIMPLG IMPG OBJG DATG
-GCLAUSE TIMPLG TIMPLG SUBGP IMPG OBJG DATG
-GCLAUSEI IMPG OBJG TIMPLG TIMPLGE
-GCLAUSE TIMPLG IMPG OBJG TIMPLGE DATG
-GCLAUSE TIMPLG IMPG OBJG DATG TIMPLGE
+GCLAUSE TIMPLGS TIMPLGS IMPG OBJG DATG
+GCLAUSE TIMPLGS TIMPLGS SUBGP IMPG OBJG DATG
+GCLAUSEI IMPG OBJG TIMPLG ACTGP OBJG DATG TIMPLGE
+GCLAUSEI IMPG OBJG TIMPLG ACTGP OBJG TIMPLGE DATG
+GCLAUSE TIMPLGS IMPG OBJG TIMPLGE DATG
+GCLAUSE TIMPLGS IMPG OBJG DATG TIMPLGE
 
 CONJUNC  , which
 CONJUNC  , and
 #CONJUNC ; this
-CONJUNC  , LIT_OFTEN OVERVERBING that
+CONJUNC  , LIT_OFTEN OVERVERBING to
 
 CLSUFF+20
 CLSUFF PETTY_SUF
 CLSUFF FUNNEND
 
 MAYBE_AMOUNT+5
-MAYBE_AMOUNT SCI_MANY
-MAYBE_AMOUNT SCI_ANUMBER of
+MAYBE_AMOUNT SCI_MANY SCI_BUZZWORD_NOUN of 
+MAYBE_AMOUNT SCI_ANUMBER of SCI_BUZZWORD_NOUN of
 MAYBE_AMOUNT all
 MAYBE_AMOUNT WAMOUNT percent of
 
-SUBGS MAYBE_AMOUNT SUBS
-SUBS KEYTHE SCI_THING_S
-SUBS KEYTHE SCI_PERSON
-SUBS KEYTHE PROPNOUN
-SUBS KEYTHE CONSTRAINT_TYPE
-SUBS KEYTHE EVAL_MEASUREMENT
-SUBS KEYTHE EXP_WHERE
-SUBS KEYTHE SCI_MODEL_TYPE
+STHE the
+STHE a
+STHE our
+STHE my
 
-SUBGP \textit{SUBP}
-SUBGP `SUBP'
-SUBGP+20 SUBP
+SUBGS SUBS
+SUBS SCI_THING_S
+SUBS STHE SCI_PERSON
+SUBS STHE PROPNOUN
+SUBS STHE CONSTRAINT_TYPE
+SUBS STHE EVAL_MEASUREMENT
+SUBS STHE EXP_WHERE
+SUBS STHE SCI_MODEL_TYPE
+
+SUBGP SUBP
 SUBP I
 SUBP we
 SUBP they
@@ -6389,7 +6393,7 @@ SUBP CONSTRAINT_P
 
 OBJG \textit{OBJ}
 OBJG `OBJ'
-OBJG+20 OBJ
+OBJG+20 MAYBE_AMOUNT OBJ
 MAYBE_ADJ+5 EXP_ADJ
 MAYBE_ADJ SCI_COUNTRY_MAYBE
 MAYBE_ADJ RELATED
@@ -6402,7 +6406,7 @@ ATHE the
 OBJ ATHE MAYBE_ADJ SCI_VERBION
 OBJ ATHE MAYBE_ADJ SCI_MODEL_TYPE
 OBJ ATHE MAYBE_ADJ CONSTRAINT_TYPE
-OBJ ATHE MAYBE_ADJ SCI_THING_S
+OBJ SCI_THING_S
 OBJ MAYBE_ADJ SCI_VERBIONs
 OBJ MAYBE_ADJ SCI_MODEL_TYPE_P
 OBJ SCI_FIELD
@@ -6420,23 +6424,25 @@ OBJ ATHE SCI_PERSON
 OBJ BIGTHEOREM
 OBJ FINDING
 
-TIMPLGE TIMPL
-TIMPLG+10 TIMPL,
-TIMPLG+15 
-SCI_MANY+2 many of
-SCI_MANY+2 few of
-SCI_MANY a good many of
-SCI_MANY+2 several of
+TIMPLGE+2 , TIMPL
+TIMPLGE+3 
+TIMPLGS+2 TIMPL,
+TIMPLGS+3 
+TIMPLG+2 , TIMPL,
+TIMPLG+3 
+SCI_MANY+2 many
+SCI_MANY+2 few
+SCI_MANY good many
+SCI_MANY+2 several
 TIMPL in the last SCI_MANY TRACE_UNIT_LONGs
 TIMPL CDESY
-TIMPL PIEENDER
+TIMPL OVERVERBING SCI_GENERIC_NOUN
 TIMPL in ATHE EXP_WHERE
 TIMPL in ATHE MAYBE_ADJ EXP_WHERE_UM
 TIMPL in the early part of the SCI_AGE
 TIMPL by the MAYBE_ADJ LABRATS
 
 ACTGS \textit{ACTS}
-ACTGS `ACTS'
 ACTGS+20 ACTS
 ACTS MAYBE_ADV OVERVERBS
 ACTS GMOD MAYBE_ADV OVERVERB
@@ -6448,7 +6454,6 @@ GMOD SCI_CAN
 GMOD SCI_MAY help to
 
 ACTGP \textit{ACTP}
-ACTGP `ACTP'
 ACTGP+20 ACTP
 ACTP MAYBE_ADV OVERVERB
 ACTP GMOD MAYBE_ADV OVERVERB
