--- a/corprules.in
+++ b/corprules.in
@@ -7170,7 +7170,7 @@ SCI_DIAGRAM_VERBS	shows
 SCI_DIAGRAM_VERBS	depicts
 SCI_DIAGRAM_VERBS	illustrates
 
-EVAL_UNIT_UM	 MB/s
+EVAL_UNIT_UM	 MBps
 EVAL_UNIT_UM	 ms
 EVAL_UNIT_UM	 sec
 EVAL_UNIT_UM	 hours
@@ -7197,7 +7197,7 @@ EVAL_UNIT_UM	 TeV
 EVAL_UNIT_UM	 arb units
 EVAL_UNIT_UM	 PREFIXX-flops
 EVAL_UNIT_UM	 GHz
-EVAL_UNIT_UM	 connections/sec
+EVAL_UNIT_UM	 connections per sec
 EVAL_UNIT	EVAL_UNIT_UM
 
 EVAL_MEASUREMENT_UM throughput
