--- a/corprules.in
+++ b/corprules.in
@@ -9461,10 +9461,9 @@ CONST \emptyset
 
 FVAR+10 VVAR
 FVAR | VVAR |
-FVAR \mid VVAR \mid
 FVAR VVAR ( VVAR )
-FVAR \langle ONEVAR \mid
-FVAR \mid ONEVAR \rangle
+FVAR \langle ONEVAR |
+FVAR | ONEVAR \rangle
 FVAR \langle ONEVAR \rangle
 
 THISREL+5 =
