--- a/corprules.in
+++ b/corprules.in
@@ -3884,6 +3884,7 @@ CONCL_CONCL LIT_LAST CONCL_MID_X.
 #############################################################################
 
 #SCI_BUZZWORD_NOUN+1000 `GOOD_NOUN'
+SCI_BUZZWORD_NOUN+30 plasticity
 SCI_BUZZWORD_NOUN+30 apertures
 SCI_BUZZWORD_NOUN+30 polarisations
 SCI_BUZZWORD_NOUN+30 polarities
@@ -6317,8 +6318,8 @@ OMIT_WHY until future work
 
 GSTART+10 PREAMBLE GCLAUSE
 GSTART GCLAUSEI
-GENERIC_SENTENCE GSTART, MIDTHEN, GCLAUSECLSUFF XXX 
-GENERIC_SENTENCE GSTARTCONJUNC GCLAUSECLSUFF; MIDTHEN GCLAUSECLSUFF XXX 
+GENERIC_SENTENCE GSTART, MIDTHEN, GCLAUSECLSUFF
+GENERIC_SENTENCE GSTARTCONJUNC GCLAUSECLSUFF; MIDTHEN GCLAUSECLSUFF
 
 MIDTHEN then
 MIDTHEN it follows that
