--- a/corprules.in
+++ b/corprules.in
@@ -8394,30 +8394,17 @@ SCI_YEAR	1970
 SCI_YEAR	1977
 SCI_YEAR	1980
 SCI_YEAR	1986
-SCI_YEAR	1993
-SCI_YEAR	1995
-SCI_YEAR	1999
-SCI_YEAR	2001
-SCI_YEAR	2004
-SCI_YEAR	2005
-SCI_YEAR	2006
-SCI_YEAR	2007
-SCI_YEAR	2008
-SCI_YEAR	2009
+CITE_YEAR+3 199DIGIT
+SCI_YEAR+10	200DIGIT
 SCI_YEAR	2010
 SCI_YEAR	2011
 SCI_YEAR	2012
 SCI_YEAR	2013
 SCI_YEAR	2014
+SCI_YEAR	2015
+SCI_YEAR	2016
 CITE_YEAR SCI_YEAR
-CITE_YEAR+10 199DIGIT
-CITE_YEAR+2 1999
-CITE_YEAR+2 2000
-CITE_YEAR+3 2001
-CITE_YEAR+3 2002
-CITE_YEAR+4 2003
-CITE_YEAR+4 2004
-CITE_YEAR+4 2005
+
 
 CITE_VOLUME SMALL_NUM
 
