--- a/corprules.in
+++ b/corprules.in
@@ -8332,7 +8332,7 @@ CITE_AUTHOR_LIST+10 SCI_SOURCE and CITE_AUTHOR_LIST
 CITE_AUTHOR_LIST+7 SCI_SOURCE
 CITE_AUTHOR_LIST!
 
-CITE_CONF Proceedings of CITE_CONF_NAME
+CITE_CONF+8 Proceedings of CITE_CONF_NAME
 CITE_CONF_NAME WMSCI
 CITE_CONF_NAME OSDI
 CITE_CONF_NAME SIGCOMM
@@ -8363,6 +8363,22 @@ CITE_CONF_NAME HPCA
 CITE_CONF_NAME SIGMETRICS
 CITE_CONF_NAME FOCS
 CITE_CONF_NAME+15 the CITE_CONF_TYPE on SCI_BUZZWORD_ADJ_MULTI SCI_BUZZWORD_NOUN
+CITE_CONF_NAME+15 the CONFNUM Annual CITE_CONF_TYPE on SCI_BUZZWORD_ADJ_MULTI SCI_BUZZWORD_NOUN
+CITE_CONF AMBITIOUS SCI_SYSTEM_PL
+
+NUMEND 1st
+NUMEND 2nd
+NUMEND 3rd
+NUMEND 4th
+NUMEND 5th
+NUMEND 6th
+NUMEND 7th
+NUMEND 8th
+NUMEND 9th
+NUMEND 0th
+CONFNUM NONZNUMEND
+
+
 
 CITE_JOURNAL+15 Journal of SCI_BUZZWORD_ADJ_MULTI SCI_BUZZWORD_NOUN
 CITE_JOURNAL Physical Review UPRVAR
@@ -8387,22 +8403,16 @@ CITE_MONTH oct
 CITE_MONTH nov
 CITE_MONTH dec
 
-SCI_YEAR	1935
-SCI_YEAR	1953
-SCI_YEAR	1967
-SCI_YEAR	1970
-SCI_YEAR	1977
-SCI_YEAR	1980
-SCI_YEAR	1986
-CITE_YEAR+3 199DIGIT
+SCI_YEAR 19DIGITDIGIT
+SCI_YEAR+3 199DIGIT
 SCI_YEAR+10	200DIGIT
-SCI_YEAR	2010
-SCI_YEAR	2011
-SCI_YEAR	2012
-SCI_YEAR	2013
-SCI_YEAR	2014
-SCI_YEAR	2015
-SCI_YEAR	2016
+SCI_YEAR+10	2010
+SCI_YEAR+10	2011
+SCI_YEAR+10	2012
+SCI_YEAR+10	2013
+SCI_YEAR+10	2014
+SCI_YEAR+10	2015
+SCI_YEAR+5	2016
 CITE_YEAR SCI_YEAR
 
 
