--- a/corprules.in
+++ b/corprules.in
@@ -7614,7 +7614,8 @@ DEDICATED wanktacular
 DEDICATED dishy
 DEDICATED aroused
 DEDICATED macho
-DEDICATED GENERAL
+DEDICATED BAD
+DEDICATED UNIQUE
 DEDICATED+3 SCI_STATUS_ADJ
 
 TEAM+5 team
