--- a/corprules.in
+++ b/corprules.in
@@ -1215,7 +1215,7 @@ SKEPTICS SCI_PEOPLE
 SKEPTICS MPEOP
 
 WERESKEP said it couldn't be SCI_ACHIEVED
-WERESKEP thought it was BAD to SCI_TRY
+WERESKEP thought it was BAD for us to SCI_TRY
 WERESKEP discouraged the pursuit of this THISIDEA
 
 IMPLEMENTATION implementation
