--- a/corprules.in
+++ b/corprules.in
@@ -7674,9 +7674,9 @@ LATEX_LAB_LABEL_REF lab:labelNEWLABNUM#
 LABADDR \titcap{CITE_INST}
 LABADDR \titcap{CITE_INST, ADDR}
 
-SCI_LAB_CAPTION KEYTHE HOME of LABADDR.
-SCI_LAB_CAPTION KEYTHE HOME, \titcap{ADDR}.
-SCI_LAB_CAPTION KEYTHE HOME.
+SCI_LAB_CAPTION \titcap{KEYTHE HOME of LABADDR.}
+SCI_LAB_CAPTION \titcap{KEYTHE HOME, ADDR.}
+SCI_LAB_CAPTION \titcap{KEYTHE HOME.}
 
 HOME Headquarters
 HOME (idealised) Headquarters
