--- a/corprules.in
+++ b/corprules.in
@@ -6083,6 +6083,12 @@ PROVERB to OVERVERB is BAD, to OVERVERB is LIT_GREAT
 PROVERB no hat, no play
 PROVERB no SCI_THING, no OVERVERB
 PROVERB	we CONSIDER there is a world EXP_WHERE_UM for at MOST WAMOUNT SCI_THING_P
+PROVERB all roads lead to PLACE
+
+PLACE TOWN
+PLACE COU
+PLACE CITE_INST
+PLACE the EXP_WHERE
 
 MPEOP SCI_PEOPLE
 MPEOP SCI_PERSONs
