--- a/corprules.in
+++ b/corprules.in
@@ -7708,8 +7708,8 @@ NEWLABNUM\#
 LATEX_LAB_LABEL lab:labelNEWLABNUM+
 LATEX_LAB_LABEL_REF lab:labelNEWLABNUM#
 
-LABADDR \titcap{CITE_INST}
-LABADDR \titcap{CITE_INST, ADDR}
+LABADDR CITE_INST
+LABADDR CITE_INST, ADDR
 
 SCI_LAB_CAPTION \titcap{KEYTHE HOME of LABADDR.}
 SCI_LAB_CAPTION \titcap{KEYTHE HOME, ADDR.}
