--- a/corprules.in
+++ b/corprules.in
@@ -3590,6 +3590,7 @@ FEATURE cusp
 FEATURE component
 FEATURE element
 FEATURE factor
+FEATURE `wow'-factor
 FEATURE angle
 FEATURE derivative
 FEATURE EXP_WHERE_CMN
@@ -7273,7 +7274,6 @@ EVAL_MEASUREMENT_UM+3 SCI_GENERIC_NOUNX
 EVAL_MEASUREMENT_UM+3 OVERVERBING RATE
 EVAL_MEASUREMENT_UM+8 EXP_ADJ RATE  
 EVAL_MEASUREMENT_UM work MNOUN
-EVAL_MEASUREMENT_UM `wow'-factor
 EVAL_MEASUREMENT_UM EXP_ADJ wow-factor
 EVAL_MEASUREMENT_UM power
 EVAL_MEASUREMENT_UM complexity
