--- a/corprules.in
+++ b/corprules.in
@@ -5950,7 +5950,7 @@ FUNNEND	, and which has only served to heighten our contempt
 FUNNEND XXX Believe us when we say that, in this issue, we have been \emph{wildly} patient
 FUNNEND , and that makes it all worthwhile (apparently)
 FUNNEND XXX In fact, we have never nerded so hard
-FUNNEND XXX LIT_REVERSAL, we emphasise that we could do \emph{so} much, if other people did it instead of us. 
+FUNNEND XXX LIT_REVERSAL, we emphasise that we could do \emph{so} much, if other people did it instead of us
 FUNNEND , though we are trying not to confuse the reader with our DIRECT reasonableness
 
 
@@ -6061,6 +6061,11 @@ SCREWOVER come off as aloof
 SCREWOVER resort to stereotypes
 SCREWOVER get silly about the whole thing
 SCREWOVER get too side-tracked
+SCREWOVER degenerate into petty SQUABBLES
+
+SQUABBLES squabbles
+SQUABBLES bickering
+SQUABBLES arguments
 
 NEEDY needy
 NEEDY cloying
@@ -6218,7 +6223,9 @@ EVOLVED redneck
 EVOLVED bogan
 EVOLVED bucolic
 EVOLVED parochial
-
+EVOLVED povo
+EVOLVED dero
+EVOLVED bogan
 
 TONE tone
 TONE standard
