--- a/corprules.in
+++ b/corprules.in
@@ -7639,6 +7639,7 @@ CORPCAPEND daring to be better.
 CORPCAPEND better than you.
 CORPCAPEND thrusting into the future, again and again.
 CORPCAPEND arguing our LAWTHING.
+CORPCAPEND they're not just better SCI_PEOPLE than you, they're better \emph{people} than you.
 
 LAWTHING ILLEGAL detainer
 LAWTHING rebuttal presumption
